introduced batch
